MGNLUI-1072 avoid potential NPE, removed obsolete TODO and refined statusbar layout so that path always expands but does not overlap item count. Additionally, it shows a tooltip (in case it's cut out)

--- a/magnolia-ui-workbench/src/main/resources/VAADIN/themes/workbench/workbench.scss
+++ b/magnolia-ui-workbench/src/main/resources/VAADIN/themes/workbench/workbench.scss
@@ -101,8 +101,13 @@
 
       .v-label {
         font-size: inherit;
-        line-height: inherit;
-        overflow: visible;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      .v-spacing {
+        width: 16px;
       }
     }
   }
